[package]
name = "app"
version = "0.1.0"
description = "Tauri App"
authors = ["Ryan Brewster"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
dirs = "4"
rusqlite = "0.26"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
